# OmniStack-Rust

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  makefile
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  (+1 more)
omnistack/: Cargo.toml
omnistack-cli/: Cargo.toml
omnistack-cli/src/: main.rs
omnistack-core/: Cargo.toml  build.rs  cbindgen.toml
omnistack-core/src/: bindings.h  channel.rs  config.rs  engine.rs  error.rs  ffi.rs  headers.rs  io_module.rs  lib.rs  macros.rs  memory.rs  module.rs  module_utils.rs  nio.rs  packet.rs  prelude.rs  protocol.rs  protocols.rs  service.rs  sys.rs  user.rs
omnistack-core/src/modules/: dpdk.rs  eth.rs  factory.rs  io.rs  ipv4.rs  mod.rs  registry.rs  udp.rs
omnistack-core/src/modules/dpdk/: dpdk.c  mod.rs
omnistack-sys/: Cargo.toml  build.rs
omnistack-sys/src/: lib.rs
omnistack-sys/src/dpdk/: bindings.rs  device.c  eal.rs  mod.rs  packet.c  packet.rs  utils.c
omnistack/config/: udp-multicore-stack.json  udp-stack.json  udp.json
omnistack/examples/: simple.rs
omnistack/src/: lib.rs  main.rs  udp.rs
omnistack/src/block/: mod.rs  udp.rs
omnistack/src/modules/: dpdk.rs  eth.rs  io.rs  ipv4.rs  mod.rs  udp.rs  user.rs
src/: CMakeLists.txt
src/app/: main.cpp
src/data_plane/: CMakeLists.txt
src/data_plane/engine/: engine.cpp
src/data_plane/graph/: graph.cpp
src/data_plane/include/omnistack/engine/: engine.h  engine.hpp
src/data_plane/include/omnistack/graph/: graph.hpp  graph_config.hpp  graph_node.h  steer_info.h  steer_info.hpp
src/data_plane/include/omnistack/io/: io_adapter.hpp
src/data_plane/include/omnistack/module/: event.hpp  hash.hpp  module.hpp
src/data_plane/include/omnistack/modules/: module.hpp
src/data_plane/io/: io.cpp
src/data_plane/io_modules/: CMakeLists.txt
src/data_plane/io_modules/dpdk/: CMakeLists.txt  dpdk.cpp
src/data_plane/io_modules/efvi/: CMakeLists.txt  efvi.cpp
src/data_plane/module/: module.cpp  sample_module.cpp
src/data_plane/modules/: CMakeLists.txt
src/data_plane/modules/eth/: CMakeLists.txt  eth_recver.cpp  eth_sender.cpp
src/data_plane/modules/eth_parser/: CMakeLists.txt  eth_parser.cpp
src/data_plane/modules/ipv4/: CMakeLists.txt  ipv4_recver.cpp  ipv4_sender.cpp
src/data_plane/modules/ipv4_parser/: CMakeLists.txt  ipv4_parser.cpp
src/data_plane/modules/network_functions/: CMakeLists.txt  firewall.cpp  ids.cpp  nat.cpp
src/data_plane/modules/node_user/: CMakeLists.txt  classifier.cpp  io_node.cpp  node_common.cpp  node_user.cpp
src/data_plane/modules/node_user/include/omnistack/node/: node_common.h  node_events.hpp
src/data_plane/modules/redis_offload/: CMakeLists.txt  redis.cpp
src/data_plane/modules/speed_test/: CMakeLists.txt  speed_test.cpp
src/data_plane/modules/tcp/: CMakeLists.txt  tcp_data_in.cpp  tcp_flow_cache.cpp  tcp_flow_cache_in.cpp  tcp_flow_cache_out.cpp  tcp_send.cpp  tcp_state_in.cpp  tcp_state_out.cpp
src/data_plane/modules/tcp/congestion_control/: cubic.cpp
src/data_plane/modules/tcp/include/: tcp_buffer.hpp  tcp_congestion_control.hpp  tcp_constant.hpp  tcp_shared.hpp  tcp_state.hpp
src/data_plane/modules/tcp/include/omnistack/tcp_common/: tcp_buffer.hpp  tcp_congestion_control.hpp  tcp_constant.hpp  tcp_events.hpp  tcp_shared.hpp  tcp_state.hpp
src/data_plane/modules/tcp_parser/: CMakeLists.txt  tcp_parser.cpp
src/data_plane/modules/udp/: CMakeLists.txt  udp_recver.cpp  udp_sender.cpp
src/data_plane/modules/udp_parser/: CMakeLists.txt  udp_parser.cpp
src/libraries/: CMakeLists.txt
src/libraries/channel/: CMakeLists.txt  channel.cpp
src/libraries/channel/include/omnistack/channel/: channel.h
src/libraries/common/: CMakeLists.txt  config.cpp  packet.cpp
src/libraries/common/include/omnistack/common/: config.h  constant.hpp  cpu.hpp  dynamic_link.hpp  hash.hpp  logger.h  packet.h  packet.hpp  protocol_headers.hpp  random.hpp  thread.hpp  time.hpp
src/libraries/hashtable/: CMakeLists.txt  hashtable.cpp
src/libraries/hashtable/include/omnistack/hashtable/: hashtable.h  hashtable.hpp
src/libraries/memory/: CMakeLists.txt  README.md  common.cpp  memory_dpdk.cpp  memory_linux.cpp
src/libraries/memory/include/omnistack/memory/: memory.h
src/libraries/node/: CMakeLists.txt  README.md  node.cpp
src/libraries/node/include/omnistack/: node.h
src/libraries/packet/: CMakeLists.txt  packet.cpp
src/libraries/packet/include/omnistack/packet/: packet.hpp
src/libraries/socket/: CMakeLists.txt  socket.cpp
src/libraries/socket/include/omnistack/socket/: socket.h  socket_c.h
src/libraries/token/: CMakeLists.txt  README.md  token.cpp
src/libraries/token/include/omnistack/token/: token.h
src/user_library/: CMakeLists.txt  symb.cpp  symb.h  symb_origin.cpp
src/user_library/include/omnistack/user_lib/: symb.h
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  http_server.cpp  linux_test.cpp  perf_multithread.cpp  perf_test.cpp
tests/data_plane/: CMakeLists.txt
tests/data_plane/module/: CMakeLists.txt  sample_module.cpp
tests/data_plane/modules/: CMakeLists.txt
tests/data_plane/modules/eth_recver/: CMakeLists.txt  eth_recver.cpp
tests/data_plane/modules/eth_sender/: CMakeLists.txt  eth_sender.cpp
tests/data_plane/modules/ipv4_recver/: CMakeLists.txt  ipv4_recver.cpp
tests/data_plane/modules/ipv4_sender/: CMakeLists.txt  ipv4_sender.cpp
tests/data_plane/modules/tcp_parser/: CMakeLists.txt
tests/data_plane/modules/udp_recver/: CMakeLists.txt  udp_recver.cpp
tests/data_plane/modules/udp_sender/: CMakeLists.txt  udp_sender.cpp
tests/libraries/: CMakeLists.txt
tests/libraries/channel/: CMakeLists.txt  channel.cpp
tests/libraries/hashtable/: CMakeLists.txt  hashtable.cpp
tests/libraries/memory/: CMakeLists.txt  memory.cpp
tests/libraries/packet/: CMakeLists.txt  packet.cpp
tests/libraries/token/: CMakeLists.txt  token.cpp
tests/redis/: redis-omni.conf  redis.conf
tests/redis/src/: Makefile  ae_epoll.c  anet.c  anet.h  aof.c  childinfo.c  cluster.c  module.c  networking.c  quicklist.c  rdb.c  redis-cli.c  scripting.c  server.c  zmalloc.h
(+25 files in other folders)
