[package]
name = "omnistack-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.10"
log = "0.4.21"
omnistack-core = { path = "../omnistack-core" }
tikv-jemallocator = "0.5.4"
