[package]
name = "omnistack-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
crossbeam = "0.8"
once_cell = "1.18.0"
thiserror = "1.0"
json = "0.12.4"
static_init = "1.0.3"
ctrlc = "3.4.1"
core_affinity = "0.8.1"
paste = "1.0"
omnistack-sys = { path = "../omnistack-sys" }
bitflags = "2.4.2"

[build-dependencies]

[features]
