[package]
name = "omnistack-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
once_cell = "1.18.0"
thiserror = "1.0"
json = "0.12.4"
static_init = "1.0.3"
ctrlc = "3.4.1"
core_affinity = "0.8.1"
paste = "1.0"
bitflags = "2.4.2"
smallvec = "1.13.1"
rust-dpdk-sys = { path = "../rust-dpdk-sys/" }

[build-dependencies]

[features]
