[package]
name = "omnistack-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
thiserror = "1.0"
json = "0.12.4"
static_init = "1.0.3"
ctrlc = "3.4.1"
core_affinity = "0.8.1"
paste = "1.0"
bitflags = "2.4.2"
arrayvec = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rust-dpdk-sys = { path = "../rust-dpdk-sys" }
omnistack-proc = { path = "../omnistack-proc" }
# numa = { git = "https://github.com/cwpearson/numa-rs", branch = "master" }

[features]
rxonly = []
perf = []
