[package]
name = "omnistack-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-dpdk-sys = { git = "https://github.com/ANLAB-KAIST/rust-dpdk", branch = "main" }

[build-dependencies]
bindgen = "0.69.1"
# pkg-config = "0.3"
# cc = "1.0.83"
