[package]
name = "omnistack"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
env_logger = "0.11.2"
once_cell = "1.19.0"
smallvec = "1.13.1"
tikv-jemallocator = "0.5"
omnistack-core = { path = "../omnistack-core" }
rust-dpdk-sys = { path = "../rust-dpdk-sys" }

[features]
txonly = []
rxonly = []
perf = []
