set(OMNI_LIBRARIES)
add_subdirectory(common)
add_subdirectory(memory)
add_subdirectory(packet)
add_subdirectory(hashtable)
add_subdirectory(token)
add_subdirectory(channel)
add_subdirectory(node)
set(OMNI_LIBRARIES ${OMNI_LIBRARIES} PARENT_SCOPE)
set_property(TARGET ${OMNI_LIBRARIES} PROPERTY POSITION_INDEPENDENT_CODE ON)
