set(OMNI_LIBRARIES ${OMNI_LIBRARIES} omni_channel PARENT_SCOPE)
add_library(omni_channel STATIC channel.cpp)
target_include_directories(omni_channel PUBLIC include)
if (${OMNIMEM_BACKEND_DPDK})
    target_link_libraries(omni_channel PUBLIC PkgConfig::DPDK)
else()
    target_link_libraries(omni_channel PUBLIC rt)
endif()
target_link_libraries(omni_channel PUBLIC numa)
target_link_libraries(omni_channel PUBLIC omni_token omni_memory)