add_library(omni_hashtable STATIC hashtable.cpp include/omnistack/hashtable/hashtable.h)
set_target_properties(omni_hashtable PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(omni_hashtable PUBLIC include)
if (${OMNIMEM_BACKEND_DPDK})
    target_link_libraries(omni_hashtable PUBLIC PkgConfig::DPDK)
else()
    target_compile_options(omni_hashtable PUBLIC -march=native -mavx512bw)
endif()
set(OMNI_LIBRARIES ${OMNI_LIBRARIES} omni_hashtable PARENT_SCOPE)