set(OMNI_LIBRARIES ${OMNI_LIBRARIES} omni_memory PARENT_SCOPE)
add_library(omni_memory STATIC common.cpp)
target_compile_options(omni_memory PRIVATE -fPIC)
target_include_directories(omni_memory PUBLIC include)
if (${OMNIMEM_BACKEND_DPDK})
    target_link_libraries(omni_memory PUBLIC PkgConfig::DPDK)
else()
    target_link_libraries(omni_memory PUBLIC rt)
endif()
target_link_libraries(omni_memory PUBLIC numa pthread omni_common)