set(OMNI_LIBRARIES ${OMNI_LIBRARIES} omni_node PARENT_SCOPE)
add_library(omni_node STATIC node.cpp)
target_compile_options(omni_node PRIVATE -fPIC)
target_include_directories(omni_node PUBLIC include)
if (${OMNIMEM_BACKEND_DPDK})
    target_link_libraries(omni_node PUBLIC PkgConfig::DPDK)
else()
    target_link_libraries(omni_node PUBLIC rt)
endif()
target_link_libraries(omni_node PUBLIC numa omni_token omni_channel omni_packet)