set(OMNI_LIBRARIES ${OMNI_LIBRARIES} omni_socket PARENT_SCOPE)
add_library(omni_socket STATIC socket.cpp)
# target_compile_options(omni_socket PRIVATE -fPIC)
target_include_directories(omni_socket PUBLIC include)
if (${OMNIMEM_BACKEND_DPDK})
    target_link_libraries(omni_socket PUBLIC PkgConfig::DPDK)
else()
    target_link_libraries(omni_socket PUBLIC rt)
endif()
target_link_libraries(omni_socket PUBLIC numa omni_memory omni_token omni_channel omni_packet omni_hashtable omni_node)